--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "material-design-lite": "^1.3.0",
+    "mdl-select-component": "0.0.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
