--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "material-design-lite": "^1.3.0",
     "mdl-select-component": "0.0.9",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
