--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dovelobutto",
+  "name": "recycling",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Giulia Chiola <giulia.chiola@modo.md>",
+  "author": "Giulia Chiola",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
